tests/paczka1/fuzzy1/69196807.err
Error in line 4: PxaBjS S933 96,3
Error in line 19: tgN S645 -2,6
Error in line 18: Tjb S645 22,5
Error in line 14: edOFe3gY3 A166 157,2
Error in line 21: Tjb A355 6,7
Error in line 23: Tjb A166 28,0
Error in line 25: xsFDu4L A166 54,7
Error in line 32: ZVVR8ROl2y S645 79,3
